Fixes 404 page left padding to 0.

--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -104,6 +104,7 @@
       margin: 0;
       margin-left: auto;
       margin-right: auto;
+      padding: 0;
       height: 100vh;
 
       @media (max-width: $mobile-max) {
